--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "starwarsapi",
   "version": "0.1.0",
+  "proxy": "https://swapi.dev",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.6.6",
@@ -11,6 +12,9 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "postcss": "^8.4.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
